changed lang keys, avatar folder button, loadstring